k8s/15-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: wms-gateway
  namespace: wms
spec:
  gatewayClassName: nginx
  listeners:
    - name: app-https
      hostname: app.datanetwork.online
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-app-datanetwork
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All

    - name: api-https
      hostname: api.datanetwork.online
      protocol: HTTPS
      port: 444
      tls:
        mode: Terminate
        certificateRefs:
          - name: tls-api-datanetwork
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All

    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
